--- a/oving4/CMakeLists.txt
+++ b/oving4/CMakeLists.txt
@@ -1,8 +1,10 @@
-cmake_minimum_required(VERSION 3.26)
-project(oving4)
+cmake_minimum_required(VERSION 3.27)
+project(oving_4)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(oving4 client.cpp
-        server.cpp
-        server.h)
+# Create an executable for the client
+add_executable(Client Client.cpp)
+
+# Create an executable for the server
+add_executable(Server Server.cpp)
